# ndc-tracking-automation

./: .env.sample  .gitignore  README.md  download_ndc_report.py  pyproject.toml
scheduler/: run_pipeline.py  setup_scheduler.ps1
scripts/: download_f&f_report.py  download_ndc_report.py  upload_to_sharepoint.py
