[project]
name = "ndc-tracking-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "office365-rest-python-client>=2.6.2",
    "playwright>=1.60.0",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "lxml>=5.1.0",
    "xlwt>=1.3.0",
]
